cmake_minimum_required(VERSION 3.1)

find_package(LLVM REQUIRED CONFIG)
add_definitions(${LLVM_DEFINITIONS})
include_directories(${LLVM_INCLUDE_DIRS})
include_directories(${CMAKE_SOURCE_DIR}/proj)
link_directories(${LLVM_LIBRARY_DIRS})

add_subdirectory(proj)  #project dir containing CMakeLists.txt file